fixed border gap

--- a/src/scss/03-sub-themes/_typhoon-side-nav.scss
+++ b/src/scss/03-sub-themes/_typhoon-side-nav.scss
@@ -14,6 +14,7 @@
 .typhoon-side-nav {
   position: fixed;
   width: 230px;
+  border-right: 1px solid $red-800;
 
   @include media-breakpoint-down(sm) {
     display: flex;
